fix: fixed hrefs

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
-  <link rel="stylesheet" href="/styles/styles.css">
-  <link rel="stylesheet" href="/styles/mediaquery-styles.css">
+  <link rel="stylesheet" href="../styles/styles.css">
+  <link rel="stylesheet" href="../styles/mediaquery-styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <title>Карточка студента</title>
@@ -16,7 +16,7 @@
     </header>
     <article class="main-content">
       <section class="about">
-        <figure class="about_photo-container"><img class="about_photo-image" src="/src/img/av.jpg" alt="Andrew`s avatar"></figure>
+        <figure class="about_photo-container"><img class="about_photo-image" src="../src/img/av.jpg" alt="Andrew`s avatar"></figure>
         <div class="about_info">
           <div class="about_info-item">
             <div class="about_info-title">Имя, фамилия:</div>
@@ -126,24 +126,24 @@
       <ul class="footer_social-list">
         <li class="footer_social-list-item">
           <a class="footer_social-link" href="https://t.me/AndrewVsP" target="_blank">
-            <img class="footer_social-link-logo" src="/src/icons/Telegram_logo.svg" alt="telegram-logo">
+            <img class="footer_social-link-logo" src="../src/icons/Telegram_logo.svg" alt="telegram-logo">
             <div class="footer_social-link-title">Telegram</div>            
           </a>
         </li>
         <li class="footer_social-list-item">
           <a class="footer_social-link" href="https://www.instagram.com/andrewvsp/" target="_blank">
-            <img class="footer_social-link-logo" src="/src/icons/Instagram_icon.png" alt="instagram-logo">
+            <img class="footer_social-link-logo" src="../src/icons/Instagram_icon.png" alt="instagram-logo">
             <div class="footer_social-link-title">Instagram</div>            
           </a>
         </li>
         <li class="footer_social-list-item">
           <a class="footer_social-link" href="https://vk.com/id3821286" target="_blank">
-            <img class="footer_social-link-logo" src="/src/icons/VK.com-logo.svg" alt="VK-logo">
+            <img class="footer_social-link-logo" src="../src/icons/VK.com-logo.svg" alt="VK-logo">
             <div class="footer_social-link-title">ВКонтакте</div></a>
         </li>
         <li class="footer_social-list-item">
           <a class="footer_social-link" href="https://github.com/AndrewPerepelkin" target="_blank">
-            <img class="footer_social-link-logo" src="/src/icons/github-logo.svg" alt="GitHub-logo">
+            <img class="footer_social-link-logo" src="../src/icons/github-logo.svg" alt="GitHub-logo">
             <div class="footer_social-link-title">GitHub</div></a>
         </li>
       </ul>
