feat: added tagets to links

--- a/index.html
+++ b/index.html
@@ -87,32 +87,32 @@
               </thead>
               <tbody>
                 <tr>
-                  <td><a href="https://www.youtube.com/watch?v=DOEtVdkKwcU">HTML</a></td>
+                  <td><a href="https://www.youtube.com/watch?v=DOEtVdkKwcU" target="_blank">HTML</a></td>
                   <td>Владилен Минин</td>
                   <td>10/10</a></td>
                 </tr>
                 <tr>
-                  <td><a href="https://www.youtube.com/watch?v=SpCUuyZZTp8">CSS</a></td>
+                  <td><a href="https://www.youtube.com/watch?v=SpCUuyZZTp8" target="_blank">CSS</a></td>
                   <td>Владилен Минин</td>
                   <td>10/10</a></td>
                 </tr>
                 <tr>
-                  <td><a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0">JavaScript</a></td>
+                  <td><a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0" target="_blank">JavaScript</a></td>
                   <td>Владилен Минин</td>
                   <td>10/10</a></td>
                 </tr>
                 <tr>
-                  <td><a href="https://www.youtube.com/watch?v=aQkgUUmUJy4&list=PLqKQF2ojwm3l4oPjsB9chrJmlhZ-zOzWT">Сложный JavaScript</a></td>
+                  <td><a href="https://www.youtube.com/watch?v=aQkgUUmUJy4&list=PLqKQF2ojwm3l4oPjsB9chrJmlhZ-zOzWT" target="_blank">Сложный JavaScript</a></td>
                   <td>Владилен Минин</td>
                   <td>10/10</a></td>
                 </tr>
                 <tr>
-                  <td><a href="https://www.udemy.com/course/react-2020-complete-guide/">React JS</a></td>
+                  <td><a href="https://www.udemy.com/course/react-2020-complete-guide/" target="_blank">React JS</a></td>
                   <td>Владилен Минин</td>
                   <td>10/10</a></td>
                 </tr>
                 <tr>
-                  <td><a href="https://www.youtube.com/watch?v=nyIpDs2DJ_c">TypeScript</a></td>
+                  <td><a href="https://www.youtube.com/watch?v=nyIpDs2DJ_c" target="_blank">TypeScript</a></td>
                   <td>Владилен Минин</td>
                   <td>10/10</a></td>
                 </tr>
