fix: fixed error

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="about_info-content">36 лет</div>
           </div>
           <div class="about_info-item">
-            <div class="about_info-title">Опыт в программировнии:</div>
+            <div class="about_info-title">Опыт в программировании:</div>
             <div class="about_info-content">2 года</div>
           </div>
           <div class="about_info-item">
