--- a/index.html
+++ b/index.html
@@ -107,7 +107,12 @@
                   <td>10/10</a></td>
                 </tr>
                 <tr>
-                  <td><a href="https://www.udemy.com/course/react-2020-complete-guide/" target="_blank">React JS</a></td>
+                  <td><a href="https://www.udemy.com/course/react-2020-complete-guide/" target="_blank">React JS/udemy</a></td>
+                  <td>Владилен Минин</td>
+                  <td>10/10</a></td>
+                </tr>
+                <tr>
+                  <td><a href="https://www.youtube.com/watch?v=9KJxaFHotqI" target="_blank">React Hooks</a></td>
                   <td>Владилен Минин</td>
                   <td>10/10</a></td>
                 </tr>
