--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="about_info-content">
               <ul class="about_info-list">
                 <li class="about_info-list-item">Люблю учиться</li>
-                <li class="about_info-list-item">Люблю программировние</li>
+                <li class="about_info-list-item">Люблю программирование</li>
                 <li class="about_info-list-item">Люблю учиться программировнию =)</li>
               </ul>
             </div>
